cluster-config/cluster-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cluster-ingress
spec:
  rules:
  - host: files.mysite.test
    http:
      paths:
      - path: /
        backend:
          serviceName: nextcloud-server
          servicePort: 80
  - host: agents.mysite.test
    http:
      paths:
      - path: /
        backend:
          serviceName: huginn-server
          servicePort: 3000
